fixed gap and size of article, aside

--- a/assessment_labs/lab_4/style.css
+++ b/assessment_labs/lab_4/style.css
@@ -101,22 +101,27 @@ header{
 .container {
     padding: 10px;
     display: flex;
-    justify-content:space-evenly;
+    gap: 30px;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
 }
 
 article {
     border: var(border);
-    border-style: solid;
+    /*border-style: solid;*/
     border-radius: 10px;
-    width: 350px;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
+    width: 45%;
     height: 250px;
 }
 
 aside {
     border: var(border);
-    border-style: solid;
+    /*border-style: solid;*/
     border-radius: 10px;
-    width: 150px;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
+    width: 15%;
     height: 250px;
 }
 
@@ -131,7 +136,6 @@ aside > p, h3 {
 footer {
     display: flex;
     flex-direction: row;
-    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
